variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:8: error: ';' expected but string literal found.
    print "bi"+biscuits
          ^